Homepage changes: -Fixed text when browser window height too small -Added scroll icon -Added flip-boxes -General styling and cleanup -Mobile device scaling improvements

--- a/team5-centric/Content/Site.css
+++ b/team5-centric/Content/Site.css
@@ -48,7 +48,9 @@ canvas {
     .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:hover {
         color: #0d0d0d;
     }
-
+.navbar-inverse .navbar-toggle {
+    border-color: #fff!important;
+}
 .navbar-inverse .navbar-toggle .icon-bar {
     background-color: #3e1b4c;
 }
@@ -57,6 +59,10 @@ canvas {
 }
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #d3d3d3;
+}
+.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
+    margin-right: 0px!important;
+    margin-left: 0px!important;
 }
 .centric-logo {
     max-height: 25px;
@@ -113,6 +119,7 @@ canvas {
     margin-bottom: -30px;
     padding-bottom: 0px !important;
     text-transform: capitalize;
+    letter-spacing: -2px;
 }
 
     .typetext h1 a {
@@ -163,23 +170,31 @@ canvas {
         transition: all 0.5s;
     }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px), (min-height: 780px) {
     .typetext h1 {
         font-size: 50px;
     }
+
         .typetext h1 a {
             font-size: 130px;
         }
+
     .thick-line {
         height: 10px;
         width: 100px;
     }
+
     #landing-content {
         padding-left: 40px;
         padding-right: 40px;
     }
+    .scroll-btn{
+        visibility: visible;
     }
-@media only screen and (min-width: 800px) and (max-width: 1199px) {
+}
+
+
+@media only screen and (min-width: 800px) and (max-width: 1199px), (min-height: 510px) and (max-height: 779px) {
     .typetext h1 {
         font-size: 30px;
     }
@@ -192,18 +207,24 @@ canvas {
         height: 7px;
         width: 70px;
     }
+
     #landing-content {
         padding-left: 20px;
         padding-right: 20px;
     }
+    .scroll-btn {
+        visibility: hidden;
+    }
 }
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 800px), (max-height: 509px) {
     .typetext h1 {
-        font-size: 20px;
+        font-size: 25px;
+        margin-bottom: -20px;
+    
     }
 
         .typetext h1 a {
-            font-size: 40px;
+            font-size: 55px;
         }
 
     .thick-line {
@@ -214,4 +235,235 @@ canvas {
         padding-left: 10px;
         padding-right: 10px;
     }
+.typetext h3 {
+    margin-top: 40px;
+    max-width: 600px;
+    font-size: 18px;
 }
+    .scroll-btn {
+        visibility: hidden;
+    }
+}
+.icon-scroll,
+.icon-scroll:before {
+    position: absolute;
+    left: 50%;
+}
+
+
+.icon-scroll {
+    width: 30px;
+    height: 50px;
+    margin-left: -15px;
+    top: 50%;
+    margin-top: -35px;
+    box-shadow: inset 0 0 0 1px #fff;
+    border-radius: 25px;
+}
+
+
+    .icon-scroll:before {
+        content: '';
+        width: 6px;
+        height: 6px;
+        background: #fff;
+        margin-left: -3px;
+        top: 8px;
+        border-radius: 4px;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        animation-name: scroll;
+    }
+
+
+@keyframes scroll {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        transform: translateY(36px);
+    }
+   
+    
+}
+.scroll-btn {
+    bottom: 90px;
+    position: absolute;
+    left: 50%;
+    right: 50%;
+}
+    .scroll-btn a {
+        text-align: center;
+        color: #fff;
+        font-size: 16px;
+        font-family: 'Roboto', sans-serif;
+        margin-top: 55px;
+        display: block;
+    }
+    .scroll-btn a:hover {
+        text-align: center;
+        color: #fff;
+        font-size: 16px;
+        font-family: 'Roboto', sans-serif;
+        margin-top: 55px;
+        display: block;
+        text-decoration: none!important;
+    }
+
+.value-wrapper {
+    width: 100%;
+    
+    padding-top: 40px;
+}
+.values {
+    max-width: 800px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+}
+.value-item{
+    padding-left: 0px!important;
+    padding-right: 0px!important;
+}
+.values-header h1 {
+    text-align: center;
+    color: #000;
+    font-size: 44px !important;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: -2px;
+    margin-top: 15px !important;
+}
+.values h2 {
+    text-align: center;
+    color: #000;
+    font-size: 34px;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: -2px;
+    margin: 0px !important;
+}
+.values h4 {
+    text-align: center;
+    color: #fff;
+    font-size: 26px;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    margin: 0px !important;
+}
+
+/*Flip Boxes for Values*/
+.flip-box {
+    background-color: transparent;
+    width: 100%;
+    height: 225px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+}
+
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-box-front {
+    background-color: #fbb823;
+    color: black;
+    padding: 20px;
+    display: table;
+}
+
+.flip-box-back {
+    background-color: #2c1c5d;
+    color: white;
+    transform: rotateY(180deg);
+    padding: 20px;
+    display: table;
+}
+.flip-content {
+    display: table-cell;
+    vertical-align: middle;
+}
+.values-header{
+    margin-bottom: 30px;
+}
+.callout-values {
+    background: #2c1c5d;
+    width: 100%;
+    height: 225px;
+    display: table;
+}
+.callout-inner{
+    display: table-cell;
+    vertical-align: middle;
+    text-align:center;
+}
+.callout-values h2 {
+    text-align: center;
+    color: #fbb823;
+    font-size: 34px;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: -1px;
+    margin-top: 0px !important;
+    margin-bottom: 15px !important;
+}
+.callout-values h5 {
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+    margin: 0px !important;
+}
+.rec-btn-sm {
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    padding: 10px 15px;
+    background: #fbb823;
+    margin-top: 30px !important;
+    display: table;
+    font-size: 16px;
+    text-decoration: none;
+    transition: all 0.5s;
+    margin-left: auto;
+    margin-right: auto;
+}
+    .rec-btn-sm:hover {
+        background: #fff;
+        color: #3e1b4c;
+        text-decoration: none;
+        transition: all 0.5s;
+    }
+
+
+
+
+    .footer-all {
+        background: #f5f5f5;
+        width:100%;
+        min-height: 100px;
+        padding-top: 40px;
+    }
+    .footer-container{
+        max-width: 1080px;
+        margin-left:auto;
+        margin-right: auto;
+    }
